# llvm-hs-extras

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  llvm-extras.cabal  llvm-hs-extras.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: LLVM.hs  LlvmExtras.hs
src/LLVM/: Extras.hs
test/: Spec.hs
