cabal-version:   2.4
name:            llvm-hs-extras
version:         0.0.0.0
synopsis:        See README for more info
description:
  See README for more info.
  See [README.md](https://github.com/jrp2014/llvm-hs-extras#llvm-hs-extras) for more details.

homepage:        https://github.com/jrp2014/llvm-hs-extras
bug-reports:     https://github.com/jrp2014/llvm-hs-extras/issues
license:         MIT
license-file:    LICENSE
author:          jrp2014
maintainer:      jrp2014 <jrp2014@users.noreply.github.com>
copyright:       2021 jrp2014
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.10.4

source-repository head
  type:     git
  location: https://github.com/jrp2014/llvm-hs-extras.git

common common-options
  build-depends:
    , base          ^>=4.14.1.0
    , llvm-hs
    , llvm-hs-pure
    , bytestring
    , deepseq

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: LLVM.Extras

executable llvm-hs-extras
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  llvm-hs-extras
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite llvm-hs-extras-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  llvm-hs-extras
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
